testsuite/vhdl/syntax/test_data/label_missmatch/009_mixed.expected
in file label_missmatch/009_mixed, line 4:
syntax error: Label mismatch in Entity Declaration
entity testbench is
       ~~~~~~~~~ <<-- here
...
end entity test_bench; -- testbench vs. test_bench
           ~~~~~~~~~~ <<-- and here
in file label_missmatch/009_mixed, line 7:
syntax error: Label mismatch in Architecture Body
architecture BENCH of testbench is
             ~~~~~ <<-- here
...
end architecture bench_test; -- BENCH vs. bench_test
                 ~~~~~~~~~~ <<-- and here
in file label_missmatch/009_mixed, line 11:
syntax error: Label mismatch in Process Statement
  Stimuli: process
  ~~~~~~~ <<-- here
...
end process Stim; -- Stimuli vs. Stim
            ~~~~ <<-- and here
